fix:some spacing in product and hover in header

--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,7 @@
   color: var(--black);
   z-index: 10;
   box-shadow: 0px 8px 10px -2px rgba(0, 0, 0, 0.46);
+  display: flex;
   justify-content: space-between;
   gap: 1rem;
 }
@@ -17,8 +18,13 @@
 .nav--container .nav--items {
   margin-left: initial;
 }
+
 .nav--items i {
   font-size: 1.5rem;
+}
+
+.nav--items i:hover {
+  transform: scale(1.2);
 }
 
 .nav--items a {
@@ -27,6 +33,7 @@
 
 .header--input--container {
   max-width: 20rem;
+  min-width: 5rem;
   flex-grow: 1;
 }
 
