--- a/css/product.css
+++ b/css/product.css
@@ -35,7 +35,7 @@
 
 /* main- container styles */
 .main--container {
-  margin: 2rem 0 0 14rem;
+  margin: 2rem 2rem 2rem 14rem;
 }
 
 .input--primary input[type="radio"],
